syntax = "proto3";

import "proto/common/v1/common.proto";

package proto.common.v1;

option go_package = "github.com/nicholasjackson/demo-lamport/byzantine_generals/gen/proto/client/v1;clientv1";

message ReceiveCommandRequest {
  proto.common.v1.Command command = 1;
}

service GeneralsService {
  // Reset resets the state 
  rpc Reset(proto.common.v1.EmptyRequest) returns (proto.common.v1.EmptyResponse) {}
  // ReceiveCommand from the generals or commander
  rpc ReceiveCommand(ReceiveCommandRequest) returns (proto.common.v1.EmptyResponse) {}
}