syntax = "proto3";

package proto.common.v1;

option go_package = "github.com/nicholasjackson/demo-lamport/byzantine_generals/gen/proto/common/v1;commonv1";

message EmptyRequest {}
message EmptyResponse {}

message Command {
  map<string,string> commands = 1;
  string from = 2;
  bool is_commander = 3;
  int32 round = 4;
}